sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/Toilet_Status_Analytics_Snapshot__c.object-meta.xml
<CustomObject>
    <description>To store toilet statuses at the end of each month</description>
    <label>Toilet Status - Analytics Snapshot</label>
    <nameField>
        <label>Toilet Status - Analytics Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toilet Status - Analytics Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>