sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Actual_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Launch_Date__c</fullName>
    <label>Actual Launch Date</label>
    <type>Date</type>
</CustomField>