sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Average_MLU_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_MLU_Score__c</fullName>
    <label>Average MLU Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>