sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Days_Open_Per__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Per__c</fullName>
    <label>Days Open Per</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>