sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <label>LocationID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>