sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <label>LocationName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>