sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/MLU_Records__c.field-meta.xml
<CustomField>
    <fullName>MLU_Records__c</fullName>
    <label>MLU Records</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>