sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>