sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Sum_MLU_Scores__c.field-meta.xml
<CustomField>
    <fullName>Sum_MLU_Scores__c</fullName>
    <label>Sum MLU Scores</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>