sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/Toilet_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Opening_Date__c</fullName>
    <label>Toilet Opening Date</label>
    <type>Date</type>
</CustomField>