sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/ToiletID__c.field-meta.xml
<CustomField>
    <fullName>ToiletID__c</fullName>
    <label>ToiletID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>