sfSandBoxCode/force-app/main/default/objects/Toilet_Status_Analytics_Snapshot__c/fields/ToiletName__c.field-meta.xml
<CustomField>
    <fullName>ToiletName__c</fullName>
    <label>ToiletName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>